--- a/public/index.html
+++ b/public/index.html
@@ -2,221 +2,47 @@
 <html lang="en">
 <head>
     <title>Protect Ukraine now</title>
-    <script>
-        // preload main image
-        new Image().src = "img/main.jpg"
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- <script>
+        // preload main image
+        new Image().src = "img/main.jpg"
+    </script> -->
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" /> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600;700&display=swap" />
 </head>
 <body>
-<style>
-/* We only want above-the-fold styles here */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Open Sans", sans-serif;
-}
-.container{
-    max-width: 1020px;
-    margin: 0 auto;
-}
-
-/*------HEADER---------*/
-header{
-    height: 60px;
-    background: #000000;
-    position: relative;
-}
-header .protect_elem{
-    bottom: -21px;
-    top: auto;
-}
-header .soc_net{
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-header .soc_net a{
-    margin-left: 10px;
-    height: 26px;
-    width: 26px;
-    color: #ffffff;
-}
-
-/*--------MAIN---------*/
-.main {
-    padding: 210px 0 168px;
-    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url("img/main.jpg") no-repeat;
-    background-size: cover;
-    text-align: center;
-}
-.main h1{
-    font-size: 65px;
-    letter-spacing: 2px;
-    line-height: 68px;
-    color: #ffffff;
-    font-weight: 700;
-    font-family: "Bebas Neue";
-    margin-bottom: 25px;
-}
-.main h2{
-    font-size: 73px;
-    letter-spacing: 4px;
-    line-height: 98px;
-    color: #ffffff;
-    font-weight: 700;
-    font-family: "Bebas Neue";
-}
-.main a{
-    width: 408px;
-    padding: 20px 0;
-    border-radius: 7px;
-    background-color: #fef300;
-    display: block;
-    margin: 75px auto 0;
-    font-size: 47px;
-    color: #000000;
-    font-weight: bold;
-    text-decoration: none;
-    text-align: center;
-}
-
-/* media */
-@media screen and (max-width: 768px) {
-    .container{
-        padding: 0 10px;
-    }
-    header .soc_net{
-       justify-content: center;
-   }
-    header .protect_elem{
-        bottom: -42px;
-        top: auto;
-        width: 100%;
-        left: 0;
-    }
-    .main{
-        padding: 80px 0 40px;
-    }
-    .main a{
-        width: 100%;
-    }
-    .parts_sec .name{
-        margin-bottom: 30px;
-    }
-    .part{
-        display: block;
-    }
-    .left_part, .right_part{
-        width: 100%;
-    }
-    .part .video_el{
-        width: 100%;
-        float: none;
-    }
-    .right_part p{
-        float: none;
-    }
-    .border_block{
-        margin: 30px auto;
-    }
-    .part2 .content ul li{
-        display: block;
-        margin-bottom: 10px;
-    }
-    .part2 .content ul li p{
-        width: 100%;
-        max-width: 100%;
-    }
-    .part2 .content ul li a{
-        margin-top: 10px;
-        display: block;
-        margin-bottom: 10px;
-    }
-    .parts_sec{
-        padding-bottom: 40px;
-    }
-    .save_block{
-        width: 100%;
-    }
-    .save_block>div:first-child{
-        font-size: 46px;
-    }
-    .save_block>div:nth-child(2){
-        font-size: 60px;
-    }
-    .letter_sec .title{
-        padding: 10px 0;
-    }
-    .news_papers ul li{
-        display: block;
-    }
-    .news_papers ul li img, .news_papers ul li .content{
-        width: 100%;
-    }
-    .news_papers ul li .content{
-        padding-left: 0;
-    }
-}
-@media only screen and (min-width: 769px) and (max-width: 1024px) {
-    .container{
-        padding: 0 10px;
-    }
-    .part .video_el{
-        width: 100%;
-    }
-    .title span:last-child {
-        font-size: 23px;
-        padding-right: 10px;
-    }
-    .part2 .content ul li a{
-        margin-right: 10px;
-    }
-}
-@media only screen and (min-width: 1025px) and (max-width: 1200px){
-    .container{
-        padding: 0 10px;
-    }
-}
-</style>
-<header>
-    <div class="protect_elem">
-        <div>Protect Ukraine</div>
-        <div>NOW</div>
-    </div>
-    <div class="container">
-        <div class="soc_net">
-            <a href="https://twitter.com/protectUKRnow" target="_blank">
-                <i class="fa-brands fa-twitter"></i>
-            </a>
-            <a href="https://www.instagram.com/protectukrainenow" target="_blank">
-                <i class="fa-brands fa-instagram"></i>
-            </a>
-            <a href="mailto:protectukrainenow@gmail.com" target="_blank">
-                <i class="fa-solid fa-envelope"></i>
-            </a>
+    <header>
+        <div class="protect_elem">
+            <div>Protect Ukraine</div>
+            <div>NOW</div>
         </div>
-    </div>
-</header>
+        <div class="container">
+            <div class="soc_net">
+                <a href="https://twitter.com/protectUKRnow" target="_blank">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a href="https://www.instagram.com/protectukrainenow" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="mailto:protectukrainenow@gmail.com" target="_blank">
+                    <i class="fa-solid fa-envelope"></i>
+                </a>
+            </div>
+        </div>
+    </header>
 
-<section class="main">
-    <div class="container">
-        <h1>Request your representative to release</h1>
-        <h2>Soviet-made fighter jets to Ukraine</h2>
-        <a href="#sendletter">ACT NOW</a>
-    </div>
-</section>
+    <section class="main">
+        <div class="container">
+            <h1>Request your representative to release</h1>
+            <h2>Soviet-made fighter jets to Ukraine</h2>
+            <a href="#usebot">ACT NOW</a>
+        </div>
+    </section>
 
-<div id="root"></div>
-
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600;700&amp;display=swap" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" />
+    <div id="root"></div>
 </body>
 </html>
